# tech-challenge-1-grupo-10

./: .gitignore  Dockerfile  README.md  main.py  pyproject.toml
notebooks/: analysis.ipynb
